Fixed a bug with edgebleeding

--- a/style.css
+++ b/style.css
@@ -109,7 +109,6 @@ body {
 
 .key {
   background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 4px;
   color: white;
@@ -120,6 +119,7 @@ body {
   text-transform: uppercase;
   transition: all 0.2s;
   user-select: none;
+  transform: translateZ(0);
 }
 
 .key.large {
